--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://navicapg/github.io/deploy",
+  "homepage": "https://navicapg/github.io/naveen",
   "name": "benchbank",
   "version": "0.1.0",
   "private": true,
